force-app/main/default/objects/Account/fields/Name_Auto_Generated__c.field-meta.xml
<CustomField>
    <fullName>Name_Auto_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Name Auto Generated</label>
    <type>Checkbox</type>
</CustomField>