force-app/main/default/objects/Account/fields/Non_Subscribed__c.field-meta.xml
<CustomField>
    <fullName>Non_Subscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Subscribed</label>
    <type>Checkbox</type>
</CustomField>