force-app/main/default/objects/Account/fields/Unsubscription_Date__c.field-meta.xml
<CustomField>
    <fullName>Unsubscription_Date__c</fullName>
    <label>Unsubscription Date</label>
    <type>Date</type>
</CustomField>