force-app/main/default/objects/Account/fields/Unsubscription_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unsubscription_Other_Reason__c</fullName>
    <label>Unsubscription Other Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>