force-app/main/default/objects/Account/fields/Unsubscription_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unsubscription_Reason__c</fullName>
    <label>Unsubscription Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INAPPROPRIATE</fullName>
            </value>
            <value>
                <fullName>SPAM</fullName>
            </value>
            <value>
                <fullName>NORMAL</fullName>
            </value>
            <value>
                <fullName>NOSIGNUP</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>